--- a/src/style/global.css
+++ b/src/style/global.css
@@ -315,3 +315,136 @@ footer {
   color: black; 
 }
 
+/* CARD STYLE */
+.card {
+  width: 270px;
+  height: 550px;
+  background: #07182E;
+  position: relative;
+  display: flex;
+  place-content: center;
+  place-items: left;
+  overflow: hidden;
+  border-radius: 20px;
+
+}
+
+
+.card img{
+  border-radius: 20px;
+  z-index: 1;
+  justify-content: center;
+  width: 100%;
+  height: 12cm;
+  padding: 3px;
+}
+
+.card-body{
+  color: white;
+  z-index: 1;
+  background-color: #07182E;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  width: 100px;
+  background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
+  height: 130%;
+  animation: rotBGimg 3s linear infinite;
+  transition: all 0.2s linear;
+}
+
+@keyframes rotBGimg {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.card::after {
+  content: '';
+  position: absolute;
+  inset: 5px;
+  border-radius: 15px;
+}  
+.card:hover:before {
+  background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
+  animation: rotBGimg 3.5s linear infinite;
+}
+
+/* STYLE BUTTON SEE-DETAIL */
+
+
+.btn-detail {
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  padding-block: 0.5rem;
+  padding-inline: 0.5rem;
+  background-color: rgb(0 107 179);
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffff;
+  gap: 10px;
+  font-weight: bold;
+  border: 3px solid #ffffff4d;
+  outline: none;
+  overflow: hidden;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-detail:hover {
+  transform: scale(1.05);
+  border-color: #fff9;
+}
+
+.btn-detail:hover .icon {
+  transform: translate(4px);
+}
+
+.btn-detail:hover::before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+.btn-detail::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 30%,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
+}
+
+@keyframes shine {
+  0% {
+    left: -100px;
+  }
+
+  60% {
+    left: 100%;
+  }
+
+  to {
+    left: 100%;
+  }
+}
