--- a/src/style/global.css
+++ b/src/style/global.css
@@ -117,6 +117,9 @@ nav div img {
   .title{
     margin-top:2cm;
   }
+
+  
+
 }
 
 /* title Syles */
@@ -316,6 +319,13 @@ footer {
 }
 
 /* CARD STYLE */
+
+.movies-card{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; 
+  gap: 0.5rem;
+}
 .card {
   width: 270px;
   height: 550px;
@@ -326,7 +336,8 @@ footer {
   place-items: left;
   overflow: hidden;
   border-radius: 20px;
-
+  /* flex-basis: calc(25% - 10px);
+  margin: 5px; */
 }
 
 
