--- a/src/style/global.css
+++ b/src/style/global.css
@@ -15,6 +15,8 @@ nav {
   background-color: black;
   opacity: 0.8;
   display: flex;
+  /* position:sticky;
+  top: 0; */
   justify-content: space-between;
   padding: 1rem 2rem;
   z-index: 1000;
@@ -59,6 +61,11 @@ nav div img {
   width: 40px;
   border-radius: 10px;
 }
+.active{
+  border-bottom: 1px solid #138dce;
+  color: #138dce;
+}
+
 
 .menu-icon {
   font-size: 28px;
@@ -123,44 +130,6 @@ nav div img {
   margin-top: 20px;
 }
 
-/* Footer styles */
-footer {
-  background-color: #333;
-  color: #fff;
-  padding: 5px 0;
-  text-align: center;
-  width: 100%;
-}
-
-.footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.footer-content p {
-  margin: 0;
-  font-size: 14px;
-}
-
-.footer-links {
-  list-style: none;
-  padding: 0;
-  margin: 10px 0 0;
-}
-
-.footer-links li {
-  display: inline;
-  margin: 0 10px;
-}
-
-.footer-links a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer-links a:hover {
-  text-decoration: underline;
-}
 
 /* Styling for the Previous button */
 .btn-prev {
@@ -252,7 +221,7 @@ footer {
   display: flex;
   justify-content: center;
   flex-wrap: wrap; 
-  gap: 0.5rem;
+  gap: 0.7rem;
 }
 .card {
   width: 16.8rem;
@@ -264,6 +233,12 @@ footer {
   place-items: left;
   overflow: hidden;
   border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+}
+.card:hover {
+  transform: scale(1.05);
+  border-color: #fff9 ;
+  z-index: 100;
 }
 
 .card img{
@@ -279,37 +254,6 @@ footer {
   z-index: 1;
   background-color: #07182E;
   
-}
-
-.card::before {
-  content: '';
-  position: absolute;
-  width: 100px;
-  background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
-  height: 130%;
-  animation: rotBGimg 3s linear infinite;
-  transition: all 0.2s linear;
-}
-
-@keyframes rotBGimg {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.card::after {
-  content: '';
-  position: absolute;
-  inset: 5px;
-  border-radius: 15px;
-}  
-.card:hover:before {
-  background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
-  animation: rotBGimg 3.5s linear infinite;
 }
 
 /* STYLE BUTTON SEE-DETAIL */
@@ -420,8 +364,52 @@ footer {
     text-align: center;
 }
 
+#poster img{
+  margin-bottom: 2rem;
+}
+
   .title{
     margin-top:2cm;
   }
+
+  
 }
 
+/* Footer styles */
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 5px 0;
+  text-align: center;
+  width: 100%;
+}
+
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-content p {
+  margin: 0;
+  font-size: 14px;
+}
+
+.footer-links {
+  list-style: none;
+  padding: 0;
+  margin: 10px 0 0;
+}
+
+.footer-links li {
+  display: inline;
+  margin: 0 10px;
+}
+
+.footer-links a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
